[package]
name = "sol-ver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
shank = "0.4.6"

[dev-dependencies]
solana-program = "3.0.0"
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"
