[package]
name = "sol-ver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
light-hasher = { version = "5.0.0", features = ["keccak"] }
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
shank = "0.4.6"

[dev-dependencies]
solana-program = "1.18"
solana-program-test = "1.18"
solana-sdk = "1.18"
spl-token = "9.0.0"
